added https support
git-svn-id: https://plugins.svn.wordpress.org/rcvcite/trunk@1210669 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/RcVCite.css
+++ b/RcVCite.css
@@ -23,6 +23,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.*/
 
 span.rcvc_verse_ref{
+    display: inline;
     color: blue;
     cursor: pointer;
 }
